2003/02/08  fadden
    - Upped version to v2.0.0.
    - Many fixes to pathname handling:
        - Correctly handle '%' when preservation is OFF.
        - Accept 4-char extensions in '-ee' without risk of buffer overflow.
        - Fixed broken assert when converting long %xx names.
        - Store "AUX" as "%00AUX" when preserving Win32 names (vs. "_AUX").
        - Always store files with ':' as path separator.
        - Recognize that some Win32 variants (Win2K and later at the least)
          will accept both '/' and '\' as pathname separators.
        - Correctly convert ".//foo" to "foo" instead of "/foo".
    - Tracked changes to NufxLib DataSource API.

2003/01/10  fadden
    - Check NufxLib "compiled" version against "linked" version.

2002/12/06  fadden
    - Made minor changes to allow linking NufxLib in as a DLL.

2002/10/20  ***** v1.1.0 shipped *****

2002/10/10  fadden
    - added fancy help text (-h)

2002/10/09  fadden
    - added "-zz" flag to specify libbz2's "bzip2" compression

2002/10/08  fadden
    - added Binary II support

2002/09/30  fadden
    - added "-z" flag to specify zlib's "deflate" compression (the
      "secret" debug dump command is now -g)

2002/09/26  fadden
    - progress updater now shows "analyzing" for scan pass of SQ

2002/09/23  fadden
    - ran the code through valgrind; found and fixed some minor bugs

2002/09/20  fadden
    - pulled the sources out and started fiddling with them again
    - changed hard tabs to spaces

2000/05/22  ***** v1.0.1 shipped (no changes - version follows nufxlib) *****

2000/05/18  ***** v1.0.0 shipped *****

2000/05/18  fadden
    - added nulib2 to set of things stripped by "distbin"
    - updated version information to indicate final release

2000/03/25  ***** v0.6.1 shipped *****

2000/03/25      fadden
    - Sheppy says Mac OS X PPC v1.02 and v1.2 work with minor SysDefs tweak

2000/03/05  ***** v0.6.0 (beta) shipped *****

2000/03/05  fadden